import 'package:flutter/material.dart';

const emailFieldKey = ValueKey('email-field');
const passwordFieldKey = ValueKey('password-field');
const signinBtnKey = ValueKey('signin-btn');
const profileContainerKey = ValueKey('profile-container');
const nameFieldKey = ValueKey('name-field');
const signupEmailFieldKey = ValueKey('email-field');
const signupPasswordFieldKey = ValueKey('password-field');
const confirmPasswordFieldKey = ValueKey('confirm-password-field');
const signinButtonKey = ValueKey('signin-btn');
const signupButtonKey = ValueKey('signup-btn');
const googleSigninButtonKey = ValueKey('google-signin-btn');
const noAccountButtonKey = ValueKey('no-account-btn');
const followUnfollowButtonKey = ValueKey('follow-unfollow-btn');
const searchTextfieldKey = ValueKey('search-textfield');
const configSwitchKey = ValueKey('config-switch-key');
const pickStateButtonKey = ValueKey('pick-state-btn');
const updateTimelineButtonKey = ValueKey('update-timeline-btn');
const politicsListKey = ValueKey('politics-list');
const searchPoliticsFollowUnfollowButton = ValueKey('follow-unfollow-btn');
const logoutButtonKey = ValueKey('logout-button');
const timelineListKey = ValueKey('timeline-list');
const searchPoliticsSlidersIconKey = ValueKey('sliders-icon');
const followPoliticProfileKey = ValueKey('follow-politic-profile');
const sendEmailButtonKey = ValueKey('send-email-btn');
const editProfileProfileContainerKey = ValueKey('profile-container');
const editProfileNameFieldKey = ValueKey('name-key');
const editProfileEmailFieldKey = ValueKey('email-field');
const photoUrlFileKey = ValueKey('photo-url-file');
const photoUrlUserKey = ValueKey('photo-url-user');
const goToPostCommentsButtonKey = ValueKey('go-to-post-comments-button');
const arrowBackButtonKey = ValueKey('arrow-back-btn');
const commentButtonKey = ValueKey('comment-button');
const commentsKey = ValueKey('comments');
const profileImageBottombarKey = ValueKey('profile-image-bottombar');
const userPhotolessIconKey = ValueKey('user-photoless-icon');
const cardBaseContentKey = ValueKey('card-base-content');
const tramitationsIconKey = ValueKey('tramitations-icon');
const seePropostaDocumentKey = ValueKey('proposta-document');
const currentPasswordFieldKey = ValueKey('current-password-field');
const newPasswordFieldKey = ValueKey('new-password-field');
const despesaImageIconKey = ValueKey('despesa-image-icon');
const cardBaseKey = ValueKey('card-base');
const expensesTooltipKey = ValueKey('expenses-tooltip');
const menuEditDeleteKey = ValueKey('menu-edit-delete');
const stopEditingCommentKey = ValueKey('stop-editing-comment');
const proposalAuthorsVisibilityKey = ValueKey('proposal-authors-visibility');
const newPasswordConfirmationFieldKey =
    ValueKey('new-password-confirmation-field');
